fix: align buttons and nicer links

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,10 @@ main {
   align-items: center;
 }
 
+.game-row {
+  display: flex;
+}
+
 .game-container {
   display: flex;
   /* height: 100%; */
